--- a/sample/src/main/resources/application.properties
+++ b/sample/src/main/resources/application.properties
@@ -2,3 +2,5 @@ controller.uri.datasets=datasets
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.data.jpa.repositories.bootstrap-mode=default
+spring.servlet.multipart.max-file-size =-1
+spring.servlet.multipart.max-request-size =-1
